# Compiladores-Codes

./: CMakeLists.txt  README.md
CSharp/SExpr/: SExpr.sln
CSharp/SExpr/SExpr/: Program.cs  SExpr.g4
MMML/: CMakeLists.txt  CodeVisitor.cpp  FuncbodyVisitor.cpp  FunctionCallArgListVisitor.cpp  InstructionBlock.cpp  MMML.g4  MetaExprVisitor.cpp  NestedSymbolTable.cpp  README.md  Symbol.cpp  ToplevelVisitor.cpp  TypeRegistry.cpp  TypedArgListVisitor.cpp  basic_types.cpp  casts.cpp  mmml.html  mmml.org  mmml_error.cpp  mmmlc.cpp
MMML/errors/: 01-wrong_types.mmml  02-unknown_types.mmml  03-cant_coerce.mmml  04-cant_shadow.mmml
MMML/examples/: 01-hello_world.mmml  01-hello_world.s  02-entrada-saida.mmml  02-entrada-saida.s  03-tipos.mmml  03-tipos.s  04-controle_de_fluxo.mmml  04-controle_de_fluxo.s  05-funcoes.mmml  05-funcoes.s  06-funcoes.mmml  06-funcoes.s  07-seq.mmml  07-seq.s  08-seq-nil.mmml  08-seq-nil.s  09-bool-coertion.mmml  10-nested_envs.mmml  11-coercion.mmml  12-nth.mmml  20--seq-filter.mmml  21-return-string.mmml  22-sum-seq.mmml  23-int-to-string.mmml  30-custom.mmml  40-coertion.mmml  50-fib.mmml
MMML/include/mmml/: BaseCodeVisitor.H  CodeContext.H  CodeVisitor.H  FuncbodyVisitor.H  FunctionCallArgListVisitor.H  FunctionRegistry.H  Instruction.H  InstructionBlock.H  MetaExprVisitor.H  NestedSymbolTable.H  Symbol.H  ToplevelVisitor.H  Type.H  TypeRegistry.H  TypedArgListVisitor.H  basic_types.H  casts.H  error.H  mmml_error.H  utils.H
MMML/inputs/: custom_types.mmml  expr1.mmml  fun1.mmml  funcall1.mmml  funcall2.mmml  if.mmml  let.mmml  lists.mmml  main.mmml  main2.mmml  main3.mmml  precedence1.mmml  precedence_bool.mmml  precedence_bool2.mmml  seq1.mmml  tuples.mmml
MMML/old/: CodeVisitor.H  MMML.g4  MMMLInterpreter.cs  NestedSymbolTable.cs  mimimil.cs  mmmlcodegen.cs  mmmltypes.cs
MMML/tests/: CMakeLists.txt  test_antlr_any.cpp  test_nested_table.cpp  test_sequence_types.cpp  test_types.cpp  test_types_with_registry.cpp
MathExprParser/: CMakeLists.txt  MathExpr.g4  MathExpr.html  MathExpr.org  MathExprErrorListener.H  MathExprListener.H  README.md  mathexpr.cpp
SExpr/: README.md
SExpr/Antlr/: CMakeLists.txt  SExpr.g4  sparser_antlr.cpp
SExpr/Antlr-Attributes/: CMakeLists.txt  SExpr.g4  sparser_antlr_attrs.cpp
SExpr/AntlrListener/: .clang_complete  CMakeLists.txt  SExpr.g4  SExprMyListener.H  sparser_antlr_listener.cpp
SExpr/AntlrVisitor/: .clang_complete  CMakeLists.txt  SExpr.g4  SExpr.html  SExpr.org  SExprMyVisitor.H  SExprVisitor.H  sparser_antlr_visitor.cpp  sparser_antlrvisitor.cpp
SExpr/CSharp/SExpr/: README.md
SExpr/CSharp/SExpr/SExpr/: Program.cs  SExpr.csproj  SExpr.g4
SExpr/CSharp/SExpr/SExpr/Properties/: AssemblyInfo.cs
SExpr/Inputs/: err_teste_2.txt  err_teste_3.txt  err_teste_4.txt  err_teste_5.txt  teste2.txt  teste4.txt  teste5.txt
SExpr/LL1/: CMakeLists.txt  SExpr.html  SExpr.org  sparser2.js  sparser_console.html  sparser_console.js  sparser_ll1.cpp  sparser_naive.cpp
SExpr/Naive/: CMakeLists.txt  sparser_naive.cpp
SExpr/Naive-Tokens/: CMakeLists.txt  SExpr.html  SExpr.org  SExprL.g4  sparser_naive_tokens.cpp
StackVM/: CMakeLists.txt  README.md  StackVM.g4  StackVM.html  StackVM.org  StackVMErrorListener.H  StackVMInstructionListener.H  StackVMLabelListener.H  stackvm.cpp  stackvm2.cpp
StackVM/include/: data.H  instructions.H  vm.H
StackVM/tests/: 01-oneliner.txt  02-twoliners.txt  03-pushstring.txt  10-labels.txt  11-conflicting-labels.txt  20-simple-sum.txt  21-sum-sum-div.txt  22-simple-mul.txt  30-simple-jump.txt  31-simple_loop.txt  32-simple-loop-bpos.txt  33-simple-loop-bneg.txt  40-test-and.txt  41-test-and-2.txt  42-test-bitsize.txt  50-read.txt  60-array-create.txt  61-array-append.txt  70-funcao-1.txt  70-funcao-3.txt  70-funcao-4-txt  70-funcao-5.txt  70-funcao2.txt
